--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,9 +29,9 @@
               <div class="panel-heading">Top Source</div>
               <div class="panel-body" style="padding: 40px">
                     <ul style="padding-left:5px">
-                      <li>Source 1: {{ source1 }}</li>
-                      <li>Source 2: {{ source2 }}</li>
-                      <li>Source 3: {{ source3 }}</li>
+                      <li>Source 1: {{ src[0] }}</li>
+                      <li>Source 2: {{ src[1] }}</li>
+                      <li>Source 3: {{ src[2] }}</li>
                     </ul>
               </div>
             </div>
@@ -40,9 +40,9 @@
                 <div class="panel-heading">Top Destination</div>
                 <div class="panel-body" style="padding: 40px">
                       <ul style="padding-left:5px">
-                        <li>Dest 1: {{ dest1 }}</li>
-                        <li>Dest 2: {{ dest2 }}</li>
-                        <li>Dest 3: {{ dest3 }}</li>
+                        <li>Dest 1: {{ dest[0] }}</li>
+                        <li>Dest 2: {{ dest[1] }}</li>
+                        <li>Dest 3: {{ dest[2] }}</li>
                       </ul>
                 </div>
               </div>
